# order-recommendations

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: datasets.py  db.py  main.py  models.py  recommendations.py  schemas.py
app/ingestion/: cleaners.py  loader.py  loaders.py  pipelines.py
data/: inventory.csv
notebooks/: ADR_Data_Cleaning.md  data_expo.ipynb
tests/: conftest.py
tests/integration/: test_ingestion.py  test_recommendations.py
tests/unit/: test_cleaners.py  test_recommendations.py
