[project]
name = "order-recommendations"
version = "0.1.0"
description = "Order Recommendation Challange"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "seaborn>=0.13.2",
]
